# synthetico

./: .gitignore  CMakeLists.txt  README.md  config-brew-llvm.sh
cmake/: EnableWarnings.cmake  Findcudd.cmake
planning_benchmarks/: slippery_world_PPLTL.py  triangle_tireworld_PPLTL.py
src/: CMakeLists.txt
src/include/synthetico/: automata.hpp  automatabdd.hpp  backend.hpp  common.hpp  qbf.hpp  quantification.hpp  random.hpp  spec.hpp  synth.hpp  synthetico.hpp  transducer.hpp  varmgr.hpp
src/include/synthetico/encoding/: full.hpp  purepast.hpp
src/include/synthetico/encoding/full/: det.hpp  full.hpp
src/include/synthetico/game/: VarMgr.hpp  bdd.hpp  classic.hpp  novel.hpp  qbf.hpp
src/src/: automata.cpp  automatabdd.cpp  backend.cpp  common.cpp  main.cpp  qbf.cpp  quantification.cpp  random.cpp  spec.cpp  synth.cpp  transducer.cpp  varmgr.cpp
src/src/encoding/: full.cpp  purepast.cpp
src/src/encoding/full/: det-old.cpp  det.cpp  full.cpp  monoidet.cpp
src/src/game/: VarMgr.cpp  bdd.cpp  classic.cpp  novel.cpp  qbf.cpp
tests/: results-300-5-20-42.txt  test.sh
tests/aaai/: random-300-5-20-42.txt  results-300-5-20-42.txt  results-slippery-3-10.txt  results-tireworld-2-10.txt  slippery-3-10.txt
tests/scripts/: slippery_world_PPLTL.py  triangle_tireworld_PPLTL.py
